# bugstr

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  build.gradle.kts  settings.gradle.kts  tsconfig.base.json
.github/workflows/: schema-validation.yml
android/: .gitignore  CHANGELOG.md  README.md  build.gradle.kts
android/gradle/: libs.versions.toml
android/src/main/: AndroidManifest.xml
android/src/main/java/com/bugstr/ui/: BugstrCrashPrompt.kt
android/src/main/res/values/: strings.xml
bugstr-nostr-crypto/: build.gradle.kts
bugstr-nostr-crypto/src/main/kotlin/com/bugstr/nostr/crypto/: Nip17PayloadBuilder.kt  (+1 more)
dart/: CHANGELOG.md  README.md  pubspec.yaml
dart/lib/: bugstr.dart
dart/lib/src/: bugstr_client.dart  bugstr_crash_handler.dart  bugstr_crash_report_cache.dart  bugstr_report_assembler.dart  chunking.dart  compression.dart  config.dart  nip17_payload_builder.dart  payload.dart  transport.dart
dart/test/: compression_test.dart  nip17_payload_builder_test.dart
electron/: .gitignore  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
electron/src/: chunking.ts  compression.ts  index.ts  sdk.ts  transport.ts
electron/tests/: sdk.test.ts
go/: README.md  bugstr.go  go.mod  go.sum
python/: README.md  pyproject.toml
python/bugstr/: __init__.py
react-native/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
react-native/src/: chunking.ts  index.ts  transport.ts
rust/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
rust/docs/: CHUNK_DISTRIBUTION_DESIGN.md  NIP17_NIP59_AUDIT.md  RATE_LIMITING.md
rust/src/: chunking.rs  compression.rs  event.rs  lib.rs  storage.rs  transport.rs  web.rs
rust/src/symbolication/: android.rs  flutter.rs  go.rs  javascript.rs  mod.rs  python.rs  react_native.rs  rust_sym.rs  store.rs
rust/static/: index.html
src/: sdk.ts
src/main/java/com/bugstr/: BugstrAnrWatcher.kt  BugstrCrashHandler.kt  BugstrCrashReportCache.kt  BugstrReportAssembler.kt
src/main/java/com/bugstr/ui/: BugstrCrashPrompt.kt
src/main/res/values/: strings.xml
test-vectors/: README.md  chk-encryption.json  nip17-gift-wrap.json  package.json  validate.js
typescript/: README.md  package.json  vitest.config.ts
typescript/.github/workflows/: ci.yml
typescript/src/: index.ts
typescript/tests/: compression.test.ts
(+10 files in other folders)
