[package]
name = "bugstr"
version = "0.1.0"
edition = "2021"
description = "Privacy-focused crash reporting using NIP-17 gift-wrapped DMs"
license = "MIT"
repository = "https://github.com/alltheseas/bugstr"
keywords = ["nostr", "crash-reporting", "nip-17", "privacy"]
categories = ["development-tools::debugging"]

[[bin]]
name = "bugstr"
path = "src/bin/main.rs"

[dependencies]
base64 = "0.22"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
chrono = "0.4"
colored = "3.0"

# Nostr crypto
nostr = { version = "0.43", features = ["nip44"] }

# Storage
rusqlite = { version = "0.33", features = ["bundled"] }

# Web server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = { version = "8.5", features = ["axum"] }
mime_guess = "2.0"

# Symbolication
regex = "1.10"
sourcemap = "9.0"
tempfile = "3.14"
semver = "1.0"

# Hashtree for large payload chunking (Phase 2)
hashtree-core = "0.2"

[dev-dependencies]
